# spinbench

./: BUILD  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  WORKSPACE  build_with_spack_cmake.sh
src/: main.cc
